--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,108 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+  padding: 0;
+  background: #ccc;
+  color: #666;
+}
+
+body * {
+  font-weight: 100;  
+}
+
+ul, li {
+  list-style: none;
+}
+
+section {
+  width: 100vw;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+section>* {
+  width: 1100px;
+  margin: 0 auto;
+}
+
+.contents {
+  flex: 1;
+}
+
+.left {
+  text-align: left;
+}
+
+.right {
+  text-align: right;
+}
+
+.container {
+  color: white;
+}
+
+.inner {
+  box-shadow: inset 0 0 10px black;
+}
+
+.container>article {
+  display: flex;
+}
+
+.container h1 {
+  font-weight: 300;
+  font-size: 2em;
+}
+
+.container h2 {
+  font-weight: 100;
+  font-size: 1.5em;
+}
+
+.container img {
+  width: 15em;
+  height: 15em;
+}
+
+.container .contents {
+  padding: 3em 0;
+}
+
+#description {
+  background: url('/assets/img/bg1.jpg');
+  background-size: cover;
+  /* background: #238a9c;   */
+}
+
+.point article {
+  display: flex;
+  padding: 2em 0;
+  color: white;
+}
+
+.point h1 {
+  flex: 0;
+  flex-basis: 7em;
+  margin: 0 1em;
+  font-size: 2em;
+}
+
+.point h2 {
+  flex: 1;
+  font-size: 1em;
+  margin: 0;
+  line-height: 170%;
+}
+
+#p1 .bg {
+  position: absolute;
+  width: 100vw;
+  height: 30em;
+  object-fit: cover;
+  filter: brightness(50%);
+  z-index: -1;
+}
+
+#p1 * {
+  color: white;
+}
