--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,7 +26,7 @@
   </article>
 </section>
 
-<section id="description" class="container inner">
+<section id="section-description" class="container inner">
   <article>
     <div class="contents">
       <h1>Share all the assets from We2lab.</h1>
