--- a/src/app/micro/footer/footer.component.css
+++ b/src/app/micro/footer/footer.component.css
@@ -1,17 +1,26 @@
 footer {
   margin: 2em auto;
+  line-height: 150%;
   color: #ddd;
   box-sizing: border-box;
   font-weight: 300;
 }
 
 footer nav {
-  display: flex;
-  padding: 0 10em;
+  margin-bottom: 2em;
 }
 
 footer nav li {
-  flex: 1;
+  display: inline-block;
+  margin-right: 3em;
+}
+
+footer p {
+  font-size: 0.9em;  
+}
+
+footer p+p {
+  margin-top: -1em;
 }
 
 .footer {
