--- a/src/app/micro/title-banner/title-banner.component.html
+++ b/src/app/micro/title-banner/title-banner.component.html
@@ -1,11 +1,11 @@
 <ng-container [ngSwitch]="currentPage">
   <section [ngClass]="{'subtitle': isSubPage}">
     <div id="bg0"></div>
-    <div id="bg_others">
+    <div>
       <img src="/assets/img/header_sub.png" class="bg_others_1">
     </div>
 
-    <div id="bg_others">
+    <div>
       <img src="/assets/img/header_sub.png" class="bg_others_2">
     </div>
 
