--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,13 +1,25 @@
 <section class="section-half-transparent">
-  <h1>Manager Information</h1>
-  <li>Cell Phone: +82 10 1234 5678</li>
-  <li>Address: Seoul</li>
-  <li>Email: 100kimch@naver.com</li>
-  <li>KakaoID: kimjihyeong100</li>
-  <li>Twitter: none</li>
+  <article>
+    <h1>Manager Information</h1>
+    <li>Cell Phone: +82 10 1234 5678</li>
+    <li>Address: Seoul</li>
+    <li>Email: 100kimch@naver.com</li>
+    <li>KakaoID: kimjihyeong100</li>
+    <li>Twitter: none</li>
+  </article>
 </section>
 
 <section class="section-description">
-  <h1>Detailed Information</h1>
-  <h2>Hello World</h2>
+  <article>
+    <h1>Detailed Information</h1>
+    <h2>Various Modular IoT Door Lock</h2>
+    <h3>안전한 IoT Door Lock</h3>
+    <li>IoT Device, Door Lock 각각 독립 된 처리시스템</li>
+    <li>안정성을 검증 받은 인기 Door Lock을 사용</li>
+    <li>어떤 환경에서도 설치가 가능한 다양한 모델</li>
+    <h3>경제적인 IoT Door Lock</h3>
+    <li>기존 디지털도어락을 모듈구조로 설계</li>
+    <li>설치환경에 맞는 다양한 모듈 선택 가능</li>
+    <li>장애 시 빠른 조치 가능</li>
+  </article>
 </section>
