--- a/src/app/micro/footer/footer.component.html
+++ b/src/app/micro/footer/footer.component.html
@@ -1,12 +1,12 @@
 <section class="footer">
   <footer>
-    <nav>
+    <!-- <nav>
       <li>ABOUT</li>
       <li>GALLERY</li>
       <li>BLOG</li>
       <li>이용약관</li>
       <li>개인정보처리방침</li>
-    </nav>
+    </nav> -->
     <p>
       상호명: 위투랩 (we2lab) | 대표: 우용성 | 개인정보관리책임자: Martin | 전화: 031-786-1038 | 이메일: martin@we2lab.com
     </p>
