--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,28 +1,24 @@
-<section id="p1" class="point">
-  <img class="bg" src="/assets/img/bike.jpg">
+<section class="point">
+  <img class="bg" src="/assets/img/wood.jpg">
   <article>
-    <h1>1. Electrical Bike Sharing System</h1>
-    <h2>We planned Bike Sharing System Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos cupiditate architecto vel
-      earum sunt consectetur reiciendis eius quasi officiis molestias quis numquam omnis veniam nulla quidem distinctio voluptas,
-      tempore ea?</h2>
+    <h1>Room Sharing Service <br>with PMS / RMS</h1>
+    <h2 lang="en">We2lab is a Korean company which provides a solution for hosts to rent or lease short-term lodging with artificial intelligence.
+      PMS and RMS are more useful for host to make a good business. We also provide a service for general hosts who have
+      a single room which makes successful business in affordable prices.</h2>
   </article>
-</section>
-
-<section id="p2" class="point">
   <article>
-    <h2>We planned Bike Sharing System Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus illo, minus recusandae
-      atque maxime saepe quidem facilis perspiciatis consectetur beatae accusamus maiores quae amet cupiditate nisi ut nemo,
-      quasi sapiente.¸</h2>
-    <h1>2. Bike Sharing System</h1>
+    <h2 lang="en">We provide user-friendly electrical bike sharing system that frees us from pollution and traffic jam.
+      AI technology solves the problems of management and profit which make sustainable sharing system.
+      Various data from GPS, Vibration Sensor, Gyroscope is collected and used for a better service.</h2>
+    <h1>Electrical Bike Sharing System</h1>
   </article>
-</section>
-
-<section id="p3" class="point">
   <article>
-    <h1>3. Bike Sharing System</h1>
-    <h2>We planned Bike Sharing System Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores libero nam repellendus
-      quae pariatur incidunt provident inventore? Rem qui unde quia nam, magni aut illo provident, nisi laudantium, numquam
-      quaerat!</h2>
+    <h1>Logistics Sharing Service based on Computer</h1>
+    <h2 lang="en">We serve a next-generation B2B2C logistics solution. Collecting and analyzing data using computer vision enables your business to be pliable and high profitable. Online marketplace aggregation is supported, therefore, hosts can scale businesses.
+    </h2>
+    <!-- <h2 lang="ko">우리는 다음세대의 B2B2C 물류서비스 솔루션을 제공합니다. Computer vison 기반의 데이터 수집과 분석 기술은 보다 유연한 관리와 수익 개선을 가능하게 합니다. 물류 온라인마켓 서비스 연동은 호스트에게
+      새로운 비지니스 확장을 지원합니다.</h2> -->
+
   </article>
 </section>
 
@@ -30,7 +26,7 @@
   <article>
     <div class="contents">
       <h1>Share all the assets from We2lab.</h1>
-      <h2>Detailed contents here.</h2>
+      <h2 routerLink="/contact" class="withLink">Contact Us >></h2>
     </div>
     <div>
       <img src="/assets/img/teamwork.svg" alt="share">
