--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,14 +1,23 @@
 <section class="section-half-transparent">
   <article>
-    <h1>Manager Information</h1>
-    <li>Cell Phone: +82 10 1234 5678</li>
-    <li>Address: Seoul</li>
-    <li>Email: 100kimch@naver.com</li>
-    <li>KakaoID: kimjihyeong100</li>
-    <li>Twitter: none</li>
+    <h1>Types of Products</h1>
+    <div class="flex">
+      <li>
+        <img src="/assets/img/products_iot.png">
+        IoT Device
+        <br><b>GPS | Vibration Sensor | Gyroscope</b></li>
+      <li>
+        <img src="/assets/img/products_pms.png">
+        Property
+        <br>Management System</li>
+      <li>
+        <img src="/assets/img/products_rms.png">
+        Revenue
+        <br>Management System</li>
+    </div>
   </article>
 </section>
-
+<!-- 
 <section class="section-description">
   <article>
     <h1>Detailed Information</h1>
@@ -22,4 +31,4 @@
     <li>설치환경에 맞는 다양한 모듈 선택 가능</li>
     <li>장애 시 빠른 조치 가능</li>
   </article>
-</section>
+</section> -->
