--- a/src/app/micro/header/header.component.css
+++ b/src/app/micro/header/header.component.css
@@ -1,7 +1,6 @@
 :host {
   display: block;
-  width: 100vw;
-  overflow: hidden;
+  width: 1100px;
 }
 
 header {
@@ -9,7 +8,7 @@ header {
   padding: 1em;
   margin: 1em calc((100vw - 1100px)/2);
   border: 1px solid white;
-  position: fixed;
+  position: sticky;
   display: flex;
   justify-content: space-between;
   box-sizing: border-box;
@@ -20,7 +19,7 @@ header {
 header img {
   width: auto;
   height: 1.5em;
-  margin: 0.25em 3em;
+  margin: 0.5em 3em;
   flex: none;
 }
 
