--- a/src/app/pages/business/business.component.css
+++ b/src/app/pages/business/business.component.css
@@ -1,9 +1,75 @@
 .point {
   transform: scale(1);
   z-index: 1;
+  margin-top: 4em;
+}
+
+.point article {
+  width: 1100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2em 0;
+  height: 17em;
+  margin-top: 0;
+}
+
+.point h1 {
+  margin: -3em 0 1em 0;
 }
 
 .point li {
+  width: 100%;
+  margin: 0 1em;
   list-style: circle;
   line-height: 200%;
+  font-size: 1.5em;
+  display: block;
+  text-shadow: 0 0 10px black;
+}
+
+#p1 {
+  margin-top: 0;
+  background: linear-gradient(#111, #444);
+}
+#p1 article {
+  background: url('/assets/img/business_room.png');
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-size: auto 25em;
+}
+
+#p2 {
+  margin-top: 0;
+  background-color: #aaa;
+}
+#p2 article {
+  background: url('/assets/img/business_bike.png');
+  background-repeat: no-repeat;
+  background-position: left center;
+  background-size: auto 23em;
+}
+
+#p2 article  li{
+  text-align: right;
+}
+
+#p3 {
+  margin-top: 0;
+  background: url('/assets/img/business_logistics_bg.png');
+  background-size: cover;
+}
+#p3 article {
+  background: url('/assets/img/business_logistics.png');
+  background-size: auto 20em;
+  background-position: 90% center;
+  background-repeat: no-repeat;
+}
+
+.list li {
+  list-style: none;
+}
+
+.list img {
+  height: 25em;
 }
