--- a/src/app/pages/business/business.component.html
+++ b/src/app/pages/business/business.component.html
@@ -1,11 +1,29 @@
-<section id="p1" class="point">
-  <img class="bg" src="/assets/img/bike.jpg">
+<section class="section-half-transparent">
+  <article>
+    <h1>Service Introduction</h1>
+    <video controls autoplay>
+      <source src="https://s3.ap-northeast-2.amazonaws.com/we2lab/We2Lab_Service+Video_Final.mp4" type="video/mp4" />
+    </video>
+  </article>
+</section>
+
+<section class="section-half-transparent title-only">
   <article>
     <h1>Business Solutions</h1>
-    <div>
-      <li>Electrical Bike Sharing</li>
-      <li>AI Hotel Sharing Solution</li>
-      <li></li>
-    </div>
+  </article>
+</section>
+<section id="p1" class="point">
+  <article>
+    <li>Room Sharing Service with PMS & RMS</li>
+  </article>
+</section>
+<section id="p2" class="point">
+  <article>
+    <li>Electrical Bike Sharing System</li>
+  </article>
+</section>
+<section id="p3" class="point">
+  <article>
+    <li>Logistics Sharing Service based on Computer</li>
   </article>
 </section>
