--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,13 +1,13 @@
-<section class="section-half-transparent">
-  <h1>Manager Information</h1>
-  <li>Cell Phone: +82 10 1234 5678</li>
-  <li>Address: Seoul</li>
-  <li>Email: 100kimch@naver.com</li>
-  <li>KakaoID: kimjihyeong100</li>
-  <li>Twitter: none</li>
+<section class="section-half-transparent short-contents">
+  <article>
+    <h1>Manager Information</h1>
+    <li>Address: 21, Baekbeom-ro 31-gil, Mapo-gu, Seoul, Republic of Korea</li>
+    <li>Email: Martin@we2lab.com</li>
+  </article>
 </section>
 
-<section class="section-description">
+<!-- <section class="section-description">
   <h1>Detailed Information</h1>
-  <h2>Hello World</h2>
-</section>
+  
+  <h2>none.</h2>
+</section> -->
