--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,10 +7,11 @@
       a single room which makes successful business in affordable prices.</h2>
   </article>
   <article>
+    <h1 class="for-mobile">Electrical Bike Sharing System</h1>
     <h2 lang="en">We provide user-friendly electrical bike sharing system that frees us from pollution and traffic jam.
       AI technology solves the problems of management and profit which make sustainable sharing system.
       Various data from GPS, Vibration Sensor, Gyroscope is collected and used for a better service.</h2>
-    <h1>Electrical Bike Sharing System</h1>
+    <h1 class="for-pc">Electrical Bike Sharing System</h1>
   </article>
   <article>
     <h1>Logistics Sharing Service based on Computer</h1>
