--- a/src/app/micro/header/header.component.css
+++ b/src/app/micro/header/header.component.css
@@ -54,7 +54,11 @@ header select {
   outline: none;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1100px) {
+  :host {
+    width: 100vw;
+  }
+
   header {
     width: 100vw;
     margin: 0;
