--- a/src/app/micro/footer/footer.component.html
+++ b/src/app/micro/footer/footer.component.html
@@ -8,10 +8,10 @@
       <li>개인정보처리방침</li>
     </nav> -->
     <p>
-      상호명: 위투랩 (we2lab) | 대표: 우용성 | 개인정보관리책임자: Martin | 전화: 031-786-1038 | 이메일: martin@we2lab.com
+      상호명: 위투랩 (we2lab) | 대표: 우용성 | 개인정보관리책임자: Martin | 이메일: martin@we2lab.com
     </p>
     <p>
-      주소: 경기도 성남시 분당구 황새울로200번길 28,
+      주소: 서울특별시 마포구 백범로31길 21 서울창업허브 #417,
       11층 R1169호 (수내동) | 사업자등록번호: 449-11-00744 | 통신판매: 미대상
     </p>
   </footer>
