--- a/src/app/micro/title-banner/title-banner.component.css
+++ b/src/app/micro/title-banner/title-banner.component.css
@@ -154,16 +154,17 @@
 }
 
 .intro article {
-  padding: 4.5em 7vw 2em 7vw;
+  width: 1100px;
+  padding-top: 5em;
   text-align: center;
   color: white;
 }
 
 .subtitle article {
   text-align: left;
-  padding-top: 5em;
-  padding-left: 10vw;
+  padding-left: 20px;
   text-shadow: 0 0 5px #333;
+  box-sizing: border-box;
 }
 
 .intro img {
@@ -181,7 +182,8 @@
 .intro h2 {
   font-size: 1.4em;
   margin: 0.25em 0;
-  font-weight: 500;
+  font-weight: 200;
+  letter-spacing: 1px;
 }
 
 .intro2 {
