--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,8 +1,13 @@
 <section class="section-half-transparent short-contents">
-  <article>
+  <article *ngIf="window['lang']=='en'">
     <h1>Manager Information</h1>
-    <li>Address: 21, Baekbeom-ro 31-gil, Mapo-gu, Seoul, Republic of Korea</li>
     <li>Email: Martin@we2lab.com</li>
+    <li>Address: 21, Baekbeom-ro 31-gil, Mapo-gu, Seoul, Republic of Korea</li>
+  </article>
+  <article *ngIf="window['lang']=='ko'">
+    <h1>고객 센터</h1>
+    <li>이메일: Martin@we2lab.com</li>
+    <li>주소: 서울특별시 마포구 백범로31길 21 서울창업허브 #417, 11층 R1169호</li>
   </article>
 </section>
 
