--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@charset "utf-8";
+
+
 body {
   width: 100vw;
   margin: 0;
@@ -9,7 +13,7 @@ body {
 }
 
 body * {
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'Nanum Gothic', sans-serif;
   font-weight: 100;
 }
 
@@ -90,6 +94,8 @@ section>* {
 .section-half-transparent h1 {
   font-size: 1.5em;
   padding-bottom: 0.5em;
+  padding-left: 20px;
+  letter-spacing: 1px;
 }
 
 .section-half-transparent li {
@@ -100,8 +106,8 @@ section>* {
 .section-half-transparent video {
   width: 100%;
   height: auto;
-  padding: 1em;
-  border: 1px solid white;
+  /* padding: 1em; */
+  /* border: 1px solid white; */
   box-sizing: border-box;
 }
 
@@ -127,7 +133,7 @@ section>* {
 }
 
 .short-contents article * {
-  margin-left: 2em;
+  /* margin-left: 2em; */
 }
 
 .point {
@@ -147,13 +153,15 @@ section>* {
   flex-basis: 12em;
   margin: 0;
   font-size: 2em;
+  letter-spacing: 1px;
+  line-height: 150%;
 }
 
-.point h1:nth-child(2n-1) {
+.point article:nth-child(2n) h1 {
   margin-right: 1em;
 }
 
-.point h1:nth-child(2n) {
+.point article:nth-child(2n-1) h1 {
   margin-left: 1em;
   text-align: right;
 }
@@ -162,7 +170,9 @@ section>* {
   flex: 1;
   font-size: 1em;
   margin: 0;
-  line-height: 170%;
+  line-height: 180%;
+  text-align: justify;
+  letter-spacing: 1px;
 }
 
 .point .bg {
