--- a/src/app/micro/footer/footer.component.html
+++ b/src/app/micro/footer/footer.component.html
@@ -11,8 +11,8 @@
       상호명: 위투랩 (we2lab) | 대표: 우용성 | 개인정보관리책임자: Martin | 이메일: martin@we2lab.com
     </p>
     <p>
-      주소: 서울특별시 마포구 백범로31길 21 서울창업허브 #417,
-      11층 R1169호 (수내동) | 사업자등록번호: 449-11-00744 | 통신판매: 미대상
+      주소: 서울특별시 마포구 백범로31길 21 서울창업허브 #417 |
+      사업자등록번호: 449-11-00744 | 통신판매: 미대상
     </p>
   </footer>
 </section>
