--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -7,7 +7,7 @@
   <article *ngIf="window['lang']=='ko'">
     <h1>고객 센터</h1>
     <li>이메일: Martin@we2lab.com</li>
-    <li>주소: 서울특별시 마포구 백범로31길 21 서울창업허브 #417, 11층 R1169호</li>
+    <li>주소: 서울특별시 마포구 백범로31길 21 서울창업허브 #417</li>
   </article>
 </section>
 
