--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -66,7 +66,7 @@
     </div>
     <div>
       <img src="/assets/img/teamwork.svg" alt="share">
-      <app-license></app-license>
+      <!-- <app-license></app-license> -->
     </div>
   </article>
 </section>
