--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -41,8 +41,8 @@
   <article>
     <h1>숙박 공유 서비스
       <br>PMS & RMS</h1>
-    <h2>We2lab은 인공지능 기반 숙박 공유 솔루션을 제공하는 대한민국 기업입니다.
-      인공지능 기반의 자원관리 시스템과 수익관리 시스템은 숙박 사업자가 더욱 효율적인 비즈니스를 가능하게 도와줍니다. 그리고 중소 숙박 사업자도 효율적인 비즈니스를 가능할 수 있도록 도와줍니다. 또한, 단독 객실을 운영하는 중소숙박 사업자도 경제적으로 활용할 수 있도록 지원합니다.</h2>
+    <h2>We2lab은 인공지능 기반 숙박 공유 솔루션을 제공하는 대한민국 기업입니다. 인공지능 기반의 자원관리 시스템과 수익관리 시스템은, 가격예측 및 온라인 자동광고 기능을 제공하여, 숙박 사업자분들이 보다 편리하고 경제적으로
+    비즈니스를 할 수 있도록 도와 드립니다. 또한, 소규모 객실을 운영하는 중소 숙박 사업자분들을 위한 클라우드 기반의 전용 서비스도 함께 제공하고 있습니다.</h2>
   </article>
   <article>
     <h1 class="for-mobile">전기자전거 공유 서비스</h1>
