--- a/src/app/pages/business/business.component.html
+++ b/src/app/pages/business/business.component.html
@@ -11,7 +11,7 @@
 <section class="section-half-transparent title-only">
   <article>
     <h1 *ngIf="window['lang']=='en'">Business Solutions</h1>
-    <h1 *ngIf="window['lang']=='ko'">서비스 안내</h1>
+    <h1 *ngIf="window['lang']=='ko'">솔루션 소개</h1>
   </article>
 </section>
 <section id="p1" class="point">
