--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -2,7 +2,7 @@
   <article *ngIf="window['lang']=='en'">
     <h1>Manager Information</h1>
     <li>Email: Martin@we2lab.com</li>
-    <li>Address: 21, Baekbeom-ro 31-gil, Mapo-gu, Seoul, Republic of Korea</li>
+    <li>Address: #417, 21, Baekbeom-ro 31-gil, Mapo-gu, Seoul, Republic of Korea</li>
   </article>
   <article *ngIf="window['lang']=='ko'">
     <h1>고객 센터</h1>
