--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="point" *ngIf="window['lang']=='en'">
   <img class="bg" src="/assets/img/wood.jpg">
   <article>
-    <h1>Room Sharing Service<br>with PMS & RMS</h1>
+    <h1>Room Sharing Service
     <h2>We2lab is a Korean company which provides a solution for hosts to rent or lease short-term lodging with artificial intelligence.
       PMS and RMS are more useful for host to make a good business. We also provide a service for general hosts who have
       a single room which makes successful business in affordable prices.</h2>
